--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 21
+      - name: Install
+        working-directory: ./svelte
+        run: npm install
       - name: Build
         working-directory: ./svelte
         run: npm run build
