Prepare svelte for static rendering

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
         run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        path: svelte/build
 
   # Deployment job
   deploy:
