--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Svelte with GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -13,7 +13,7 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
@@ -29,18 +29,15 @@ jobs:
         with:
           node-version: 21
       - name: Install
-        working-directory: ./svelte
         run: npm install
       - name: Check
-        working-directory: ./svelte
         run: npm run check && npm run lint
       - name: Build
-        working-directory: ./svelte
         run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: svelte/build
+          path: build
 
   # Deployment job
   deploy:
@@ -53,4 +50,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
