--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"pixi.js": "^8.1.6"
+	}
 }
