--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,16 +60,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-godot, build-svelte]
     steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           path: build
       - name: Debug
         run: ls -R
-      - name: Upload to pages
-        uses: upload-pages-artifact@v3
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: build
-      - name: Deploy to GitHub Pages
+      - uses: actions/deploy-pages@v4
         id: deployment
-        uses: actions/deploy-pages@v4
