Hardcode godot container version
Previous attempt didn't work

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,14 +16,13 @@ concurrency:
   group: 'pages'
   cancel-in-progress: false
 
-env:
-  GODOT_VERSION: 4.2.2
-
 jobs:
   build-godot:
     runs-on: ubuntu-latest
+    env:
+      GODOT_VERSION: 4.2.2
     container:
-      image: barichello/godot-ci:${GODOT_VERSION}
+      image: barichello/godot-ci:4.2.2
     steps:
       - uses: actions/checkout@v4
       - name: Setup
