--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,9 @@ jobs:
           mkdir -v -p ~/.local/share/godot/export_templates/
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
       - name: Build
-        run: cd godot-web-test && godot --headless --export-release Web
+        run: |
+          cd godot-web-test
+          godot --headless --export-release Web $(dirname $(pwd))/build/godot-test.html
       - uses: actions/upload-artifact@v4
         with:
           name: godot
