--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           make
       - uses: actions/upload-artifact@v4
         with:
-          name: cv-latex
+          name: cv
           path: cv-latex
 
   build-godot:
@@ -64,11 +64,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-cv]
     steps:
-      - uses: actions/download-artifact@v4
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 22
+      - uses: actions/download-artifact@v4
+        with:
+          name: cv
+          path: cv-latex
       - name: Install
         run: npm install
       - name: Check
