--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup
-        run: sudo apt-get install -y latexmk texlive-latex-extra
-      - name: Build
-        run: |
-          cd cv-latex
-          make
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v3
+        working-directory: ./cv-latex
+        with:
+          root_file: cv.tex
       - uses: actions/upload-artifact@v4
         with:
           name: cv
