Latex action take 3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,16 +19,12 @@ concurrency:
 jobs:
   build-cv:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./cv-latex
     steps:
       - uses: actions/checkout@v4
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: cv.tex
+          root_file: cv-latex/cv.tex
       - uses: actions/upload-artifact@v4
         with:
           name: cv
