--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: cv-latex/cv.tex
+          working_directory: cv-latex
+          root_file: cv.tex
       - uses: actions/upload-artifact@v4
         with:
           name: cv
