--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Compile LaTeX document
-        uses: xu-cheng/latex-action@v3
-        with:
-          working_directory: cv-latex
-          root_file: cv.tex
+      - name: Setup
+        run: sudo apt-get install -y latexmk texlive-latex-extra
+      - name: Build
+        run: |
+          cd cv-latex
+          make
       - uses: actions/upload-artifact@v4
         with:
           name: cv
