Move word counts to frontmatter updated via script
Pretty sure we can't have csr, which is needed for icons as well as
working word counts with the existing system.

Made it validate that the word counts are in sync.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,6 +74,8 @@ jobs:
           path: cv-latex
       - name: Install
         run: npm install
+      - name: Check that word counts are up to date
+        run: 'npm run wc && git diff --exit-code'
       - name: Check
         run: npm run check && npm run lint
       - name: Build
