--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"wc": "tsx scripts/updateWordCount.ts"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -30,6 +31,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.1.1",
 		"tslib": "^2.4.1",
+		"tsx": "^4.19.3",
 		"typescript": "^5.5.0",
 		"vite": "^6.0.3"
 	},
