--- a/package.json
+++ b/package.json
@@ -15,28 +15,32 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@iconify/svelte": "^4.1.0",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "2.11",
-		"@sveltejs/vite-plugin-svelte": "^5.0.2",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.49.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/eslint": "8.56.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
-		"mdsvex": "^0.11.0",
+		"mdsvex": "^0.12.6",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.1.1",
-		"tslib": "^2.4.1",
-		"tsx": "^4.19.3",
-		"typescript": "^5.5.0",
-		"vite": "^6.0.3"
+		"svelte": "^5.45.5",
+		"svelte-check": "^4.3.4",
+		"tslib": "^2.8.1",
+		"tsx": "^4.21.0",
+		"typescript": "^5.9.3",
+		"vite": "^7.2.6"
 	},
 	"type": "module",
 	"dependencies": {
 		"pixi.js": "^8.1.6"
+	},
+	"engines": {
+		"node": ">=22.21.1 <23",
+		"npm": ">=10.9.4 <11"
 	}
 }
